--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-maliit-framework (0.99.1+git) UNRELEASED; urgency=medium
+maliit-framework (2.0.0-0neon) UNRELEASED; urgency=medium
 
-  * New git snapshot
+  * New release
 
- -- Jonathan Riddell <jr@jriddell.org>  Wed, 12 Aug 2020 13:44:25 +0100
+ -- Jonathan Riddell <jr@jriddell.org>  Thu, 24 Jun 2021 13:44:25 +0100
 
 maliit-framework (0.99.1+git20151118+62bd54b-0ubuntu26) focal; urgency=medium
 
